[jan] Add individual notification methods for single events (Alfonso Marín
      Marín <almarin@um.es>).
[jan] Add Ajax interface.
[jan] Store events in UTC and convert to the user's timezone on the fly.
[jan] Remove alarm reminder code.
[jan] Change listEvents API method to return keys as dates instead of
      timestamps.


----------
v2.3.4-cvs
----------




------
v2.3.3
------

[gwr] Fix editing the start date of recurring events (kolab/issue3885).
[jan] Fix editing URLs of remote calendars.
[gwr] Fix recurring weekly events with fixed number of occurences but multiple
      incidences per week (kolab/issue3846).
[gwr] Fix recurring weekly events with intervals > 1 (Bug #8546).
[jan] Optimize event link generation (patrick.abiven@apitech.fr).
[jan] Fix Oracle SQL scripts.
[jan] Fix charset of ajax responses.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).
[jan] Speed up listing alarms (patrick.abiven@apitech.fr, Request #8638).
[jan] Simplify and improve portability of listing events without date limits
      in the SQL driver (Bug #8590).
[mjr] Fix issue that caused the default alarm time to be applied to
      listTimeObjects events (Bug #8588).


------
v2.3.2
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Allow to add address lists as attendees through the address book popup
      (Bug #7834).
[jan] Fix exporting certain weekday recurrence rules to iCalendar
      (lst_hoe02@kwsoft.de, Bug #8501).
[jan] Export recurrence end dates as date-time values in iCalendar data to
      improve compatibility with external clients (Bug #7846).
[jan] Fix synchronization with output compression enabled (Bug #7769).
[jan] Add configuration whether to show user drop down list or text field in
      permissions dialog (requires Horde 3.3.5).
[jan] Propagate the 'modified' API method (Request #8274).
[cjh] Fix the signature of the kronolith/import API method
      (rpolli@babel.it, Bug #8309).